wporg-support-2024: Prevent horizontal scrolling for user replies listing at very narrow viewports.
Props pranitdugad, coffee2code.
See #7424.
Syncs r13361.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13417 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support-2024/style.css
@@ -3158,6 +3158,12 @@ body.category #main .archive-pagination {
 .bbpress #bbpress-forums .bbp-user-replies-created div.bbp-topic-author {
 	padding-left: 1.5rem;
 }
+@media screen and (max-width: 480px) {
+	.bbpress #bbpress-forums .bbp-user-replies-created div.bbp-reply-author,
+	.bbpress #bbpress-forums .bbp-user-replies-created div.bbp-topic-author {
+		padding-left: 0;
+	}
+}
 .bbpress #bbpress-forums .bbp-author-title {
 	margin: 0;
 }
